Fixed issues for whole projekt z-index, and better/cleaner tags

--- a/src/assets/scss/animations/main-backgrounds.scss
+++ b/src/assets/scss/animations/main-backgrounds.scss
@@ -1,48 +1,21 @@
-.main-backgrounds-content{
-	position: fixed;
-  top: 0;
-  left: 0;
-  width: 65%;
-  z-index: 0;
+.color-div-wrapper {
 
-	.color-div-debit {
-		position: absolute;
-		width: 40vh;
-		height: 200vh;
-		top: -80vh;
-		left: 10vw;
-    transform: scale(2,2);
-    transform: rotate(40deg);
 
-    .inside-color {
-	    background: $blue;
-			width: 100%;
-			height: 100%;
-		}
-	}
-
-	// Next Event Page
-
-	.color-div-next-event-page {
-		position: absolute;
+	.col-div-next-event {
+		position: fixed;
 		width: 80vh;
 		height: 300vh;
 		top: -120vh;
-		left: 10vw;
+		left: 10vh;
 		transform: scale(2);
 		transform: rotate(135deg);
+		background: $pink;
 
-		.inside-color {
-			background: $pink;
-			width: 100%;
-			height: 100%;
-			z-index: 1;
-		}
 	}
 
 	// Blogg Page
 
-	.color-div-blog-page {
+	.col-div-blog-page {
 		position: absolute;
 		width: 35vh;
 		height: 200vh;
@@ -50,33 +23,38 @@
 		left: -10vw;
 		transform: scale(2,2);
 		transform: rotate(20deg);
-
-		.inside-color {
-			background: $pink;
-			width: 100%;
-			height: 100%;
-		}
+		background: $pink;
 	}
 }
 
 ////////////////////////////////////////////////////
 
+@media screen and  (max-width: 1000px) {
+
+	.color-div-wrapper {
+		.col-div-next-event {
+			height: 200vh;
+			top: -40vh;
+			left: 10vh;
+		}
+
+		.col-div-blog-page {
+			left: -28vw;
+		}
+	}
+}
 
 @media screen and  (max-width: 520px) {
-	.main-backgrounds-content{
 
+	.color-div-wrapper {
+		.col-div-next-event {
+			height: 200vh;
+			top: -40vh;
+			left: 10vh;
+		}
 
-
-		// Blogg Page
-
-		.color-div-blog-page {
-			// position: absolute;
-			// width: 35vh;
-			// height: 200vh;
-			// top: -80vh;
+		.col-div-blog-page {
 			left: -28vw;
-			// transform: scale(2,2);
-			// transform: rotate(20deg);
 		}
 	}
 }
