--- a/src/assets/scss/app-wrapper.scss
+++ b/src/assets/scss/app-wrapper.scss
@@ -1,7 +1,3 @@
-.wrapper-skeleton {
-  z-index: 4;
-}
-
 .nav {
   background: none;
   position: fixed;
@@ -12,31 +8,17 @@
   .background-opacity{
     position: fixed;
     background: $purple_dark;
-    opacity: 0.05;
-    width: 100%;
+    opacity: 0.15;
+    width: 110%;
     height: 8vh;
     left: -1vh;
   }
 
 }
 
-////////////////////////////////////////////////
-////////////////////////////////////////////////
-// Specifics for ALL components using hero
-
-.hero-head {
-  padding-top: 10vh !important;
-  z-index:1;
-}
-
-.hero-body {
-  z-index:1;
-}
-
 .views {
   // important to keep this one at min-height: 100%;
   min-height: 100%;
-  z-index: 3;
   overflow-x: hidden;
 }
 
