--- a/src/assets/scss/main-components/blog-post.scss
+++ b/src/assets/scss/main-components/blog-post.scss
@@ -73,6 +73,7 @@
 .blog-headline {
   text-transform: none;
   font-size: $font-size-4;
+  margin-top: -2vh;
 }
 
 
